fix momentum scroll not working on mobile

--- a/less/index.less
+++ b/less/index.less
@@ -149,7 +149,8 @@ body {
 	background-blend-mode: lighten;
 	background-repeat: repeat, no-repeat;
 	overflow-x: hidden;
-	overflow-y: auto;
+	overflow-y: scroll;
+	-webkit-overflow-scrolling: touch;
 }
 
 .container {
